Attempt at fixing submenu entries positioning on Firefox #932.

--- a/css/style.css
+++ b/css/style.css
@@ -669,6 +669,11 @@ a[href="javascript:;"] {
   position: relative;
   text-decoration: none;
   white-space: nowrap;
+  /* XXX firefox fix */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 .entry.has-submenu {
   padding-right: 20px;
